force-app/main/default/objects/paises__c/paises__c.object-meta.xml
<CustomObject>
    <description>Paises</description>
    <label>Pais</label>
    <nameField>
        <label>Código País</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>