force-app/main/default/objects/paises__c/fields/Abreviatura__c.field-meta.xml
<CustomField>
    <fullName>Abreviatura__c</fullName>
    <label>Abreviatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>