force-app/main/default/objects/paises__c/fields/LCODPOS__c.field-meta.xml
<CustomField>
    <fullName>LCODPOS__c</fullName>
    <label>LCODPOS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>