force-app/main/default/objects/paises__c/fields/LCODPRO__c.field-meta.xml
<CustomField>
    <fullName>LCODPRO__c</fullName>
    <label>LCODPRO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>