force-app/main/default/objects/paises__c/fields/Nombre_Pas__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Pas__c</fullName>
    <label>Nombre País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>