force-app/main/default/objects/paises__c/fields/Otros_Nombres__c.field-meta.xml
<CustomField>
    <fullName>Otros_Nombres__c</fullName>
    <label>Otros Nombres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>