force-app/main/default/objects/paises__c/fields/Pas_Europeo__c.field-meta.xml
<CustomField>
    <fullName>Pas_Europeo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>País Europeo</label>
    <type>Checkbox</type>
</CustomField>