force-app/main/default/objects/paises__c/fields/PICTUR__c.field-meta.xml
<CustomField>
    <fullName>PICTUR__c</fullName>
    <label>PICTUR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>