force-app/main/default/objects/paises__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_Pas__c</columns>
    <columns>LCODPOS__c</columns>
    <columns>LCODPRO__c</columns>
    <columns>NIF__c</columns>
    <columns>Pas_Europeo__c</columns>
    <columns>Continente__c</columns>
    <columns>Otros_Nombres__c</columns>
    <columns>PICTUR__c</columns>
    <columns>Abreviatura__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>